--- a/less/javascripture.less
+++ b/less/javascripture.less
@@ -149,7 +149,6 @@ html {
 //#reference .ui-grid-a, #reference .ui-grid-b { overflow: visible; }
 //#reference ol li {clear:both;}
 
-@word-details-height: 120px;
 #reference {
 	.reference-wrapper {
 		//padding-bottom: @word-details-height;
@@ -180,15 +179,14 @@ html {
 			padding-right: 2.2em;
 		}
 	}
-	#word-details {
+	#wordDetails {
 		font-weight: normal;
-		max-height: @word-details-height;
-		overflow: scroll;
 		h3 {
 			margin: 0;
 		}
 		.word-details-inner {
 			padding: 0 1em;
+			width: 300px;
 		}
 	}
 }
