updating version of jquery mobile and fixing lots of bugs

--- a/css/strongscolors.css
+++ b/css/strongscolors.css
@@ -3585,7 +3585,7 @@
 .H3585 .H3585{background:rgb(32,174,93);color:#fff;text-shadow:0 1px 0 #000000;}
 .H3586 .H3586{background:rgb(32,175,93);color:#fff;text-shadow:0 1px 0 #000000;}
 .H3587 .H3587{background:rgb(32,175,94);color:#fff;text-shadow:0 1px 0 #000000;}
-.H3588 .H3588{background:rgb(32,175,95);color:#fff;text-shadow:0 1px 0 #000000;}
+/*.H3588 .H3588{background:rgb(32,175,95);color:#fff;text-shadow:0 1px 0 #000000;}*/
 .H3589 .H3589{background:rgb(32,176,95);color:#fff;text-shadow:0 1px 0 #000000;}
 .H3590 .H3590{background:rgb(32,176,96);color:#fff;text-shadow:0 1px 0 #000000;}
 .H3591 .H3591{background:rgb(32,176,97);color:#fff;text-shadow:0 1px 0 #000000;}
