--- a/less/javascripture.less
+++ b/less/javascripture.less
@@ -1,13 +1,14 @@
-divinename {
+dvnnm { //removed the vowels so that searches on name and divine still work!
 	text-transform: uppercase;
 }
 .ui-page {
 	padding-top: 0 !important;
 	padding-bottom: 0 !important;
 }
-.ui-page, .ui-content {
+/*.ui-content,
+.ui-page {
 	height: 100%;
-}
+}*/
 .ui-header {
 	.ui-controlgroup, fieldset.ui-controlgroup {
 		margin: 0;
@@ -15,9 +16,6 @@ divinename {
 }
 .ui-popup {
 	padding: 0.1em 1em;
-}
-.panel-inner, .reference-wrapper {
-	padding: 42px 0 58px 0;
 }
 .panel {
 	height: 100%;
@@ -43,7 +41,7 @@ divinename {
 }
 
 @word-panel-width: 250px;
-#word {
+#results {
 	right: 0;
 	width: @word-panel-width;
 	.collapsible-wrapper {
@@ -56,31 +54,34 @@ divinename {
 		}
 	}
 	.ui-collapsible {
-		.ui-collapsible-heading {
-			.ui-collapsible-heading-toggle {
-				background: none;
-				border: none;
-				color: #fff;
-				text-shadow: 0 1px 0 #000;
-				text-ahadow: inherit;
-			}
+		-moz-box-shadow: inset -3px -3px 12px rgba(0, 0, 0, 0.3);
+		-webkit-box-shadow: inset -3px -3px 12px rgba(0, 0, 0, 0.3);
+		box-shadow: inset -3px -3px 12px rgba(0, 0, 0, 0.3);
+		.ui-collapsible-heading.transparent .ui-collapsible-heading-toggle {
+			background: none;
+			border: none;
+			color: #fff;
+			text-shadow: 0 1px 0 #000;
+			text-ahadow: inherit;
 		}
-		.ui-collapsible-content ol {
-			max-height: 290px;
-			margin: 0;
-			overflow: auto;
-			position: relative;
-			.ui-listview {
+		.ui-collapsible-content {
+			ol {
+				max-height: 260px;
 				margin: 0;
+				overflow: auto;
+				position: relative;
+				.ui-listview {
+					margin: 0;
+				}
 			}
 		}
 	}
 	.controlgroup {
 		position: absolute;
 		right: 5px;
-		top: 0;
+		top: -2px;
 		.ui-li-count {
-			right: 60px;
+			right: 30px;
 		}
 		a.ui-btn {
 			float: right;
@@ -95,36 +96,6 @@ divinename {
 		}
 	}
 }
-
-@book-panel-width: 250px;
-.books {
-	left: 0;
-	width: @book-panel-width;
-	.ui-collapsible-content {
-		.ui-btn {
-			border-radius: 0;
-			margin: -1px -1px 0 -1px;
-			width: 10%;
-			.ui-btn-inner {
-				padding-left: 0;
-				padding-right: 0;
-				width: 100%;
-			}
-			&.three-digit {
-				width: 100% / 5;
-			}
-		}
-	}
-}
-
-.reference {
-	margin-left: @book-panel-width;
-	margin-right: @word-panel-width;
-	border-left: 1px solid #ccc;
-	border-right: 1px solid #ccc;
-	height: 100%;
-	overflow: auto;
-}	
 
 .ui-content {
 	padding: 0;
@@ -165,10 +136,19 @@ html {
 	.reference-wrapper {
 		//padding-bottom: @word-details-height;
 	}
-	h2 {
-		text-align: center;
+	.sticky-panel-wrapper {
+		height: 66px;
+		h2 {
+			background: rgba(255, 255, 255, .7);
+			text-align: center;
+			margin: 0;
+			padding: .8em 0;
+			&.stuck {
+			}
+		}
 	}
 	ol.wrapper {
+		margin: 0;
 		padding: 0;
 		li {
 			margin-left: 50%;
@@ -196,79 +176,173 @@ html {
 		h3 {
 			margin: 0;
 		}
+		.content {
+			overflow: hidden;
+		}
 		.word-details-inner {
+			float: left;
 			padding: 1em 0;
-			width: 300px;
+			width: 500px;
 			h3 {
 				padding: .5em 1em;
 			}
 		}
 	}
 }
+.chapter-wrapper {
+	position: relative;
+}
 #about {
 	.ui-collapsible-set {
 		width: 350px;
 	}
 }
-/*#book {
+
+//variables
+@mobile-width: 768px;
+@book-panel-width: 250px;
+.ui-popup-container {
+	h3 {
+		margin: 0;
+	}
 	.ui-collapsible-set {
-		margin: 0 -15px;
-		.ui-collapsible-heading {
+		margin: 0;
+	}
+	.ui-collapsible-content {
+		margin-left: 0;
+		margin-right: 0;
+		padding: 0;
+		.ui-controlgroup-horizontal {
 			margin: 0;
-			.ui-collapsible-heading-toggle {
-				.ui-btn-inner {
-					//could use this to break up the books into sections background-color: rgba(255,0,0,.1);
-				}
-			}
-		}
-		.ui-collapsible-content {
-			margin-left: 0;
-			margin-right: 0;
 			padding: 0;
-			.ui-controlgroup-horizontal {
-				margin: 0;
-				padding: 0;
-			}
-			.ui-btn {
-				border-top: 0;
-				border-left: 0;
-				margin: 0;
-				width: 9.7%;
-				.ui-btn-inner {
-					padding-left: 0;
-					padding-right: 0;
-					width: 100%;
-				}
-			}
 		}
 	}
 }
-divinename {
-	text-transform: uppercase;
+.desktop-button {
+	display: none;
 }
-a.added {
-	color: #aaa;
+@media (min-width: @mobile-width) {
+	#reference-panel {
+		padding: 42px 0 0 0;
+	}
+	#bookList-popup, #results-popup {
+		bottom: 0;
+		padding: 0;
+		top: 40px;
+		position: fixed;
+		width: @book-panel-width;
+		.ui-popup {
+			border-radius: 0;
+			height: 100%;
+			overflow: scroll;
+		}
+		.close {
+			display: none;
+		}
+	}
+	.mobile-button {
+		display: none;
+	}
+	.desktop-button {
+		display: block;
+	}
 }
 
-@light-color: #5393c5;//{global-active-background-start}
-@dark-color: #6facd5;//{global-active-background-end}
-.selected-reference-link {
-	border: 1px solid 		#2373a5 //{global-active-border};
-	background: 			#5393c5 //{global-active-background-color};
-	font-weight: bold;
-	color: 					#fff //{global-active-color};
-	cursor: pointer;
-	text-shadow: 0 //{global-active-shadow-x} 1px /*{global-active-shadow-y} 1px /*{global-active-shadow-radius}* #3373a5 /*{global-active-shadow-color}*;
-	text-decoration: none;
-
-	background: 			#d6d6d6;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(@light-color), to(@dark-color));
-	background-image: -webkit-linear-gradient(@light-color, @dark-color);
-	background-image:    -moz-linear-gradient(@light-color, @dark-color);
-	background-image:     -ms-linear-gradient(@light-color, @dark-color);
-	background-image:      -o-linear-gradient(@light-color, @dark-color);
-	background-image:         linear-gradient(@light-color, @dark-color);
+#bookList-popup, #results-popup {
+	z-index: 10;
+	.ui-popup {
+		padding: 0;
+	}
 }
-.selected-reference-link a.referenceLink {
-	color: 					#fff //{global-active-color};
-}*/
+
+/*results*/
+#results-popup {
+	left: auto;
+	right: 0;
+}
+
+/*books*/
+#bookList-popup {
+	left: 0;
+}
+#bookList {
+	.ui-collapsible-content {
+		.ui-controlgroup-controls {
+			display: block;
+		}
+		.ui-btn {
+			border-radius: 0;
+			margin: -1px -1px 0 -1px;
+			width: 10%;
+			.ui-btn-inner {
+				padding-left: 0;
+				padding-right: 0;
+				width: 100%;
+			}
+			&.three-digit {
+				width: 100% / 5;
+			}
+		}
+	}
+
+}
+@media (max-width: @mobile-width) {
+	#bookList {
+		max-height: 320px;
+		overflow: scroll;
+		width: 320px;
+	}
+}
+/*reference*/
+@media (min-width: @mobile-width) {
+	.reference {
+		margin-left: @book-panel-width;
+		margin-right: @word-panel-width;
+	}	
+}
+
+//hebrew grammar
+#grammar {
+	h1 {
+		text-align: center;
+	}
+	table {
+		border-collapse: collapse;
+		width: 400px;
+		td {
+			border: 1px solid #000;
+			text-align: left;
+		}
+	}
+}
+
+//advanced search popup
+
+
+//fix listview performance issues
+*.ui-listview *.ui-btn-up-c,
+*.ui-listview *.ui-btn-down-c,
+*.ui-listview *.ui-btn-hover-c {
+//	border: 1px solid 		#ccc /*{c-bup-border}*/;
+//	background: 			#eee /*{c-bup-background-color}*/;
+//	font-weight: bold;
+//	color: 					#222 /*{c-bup-color}*/;
+//	text-shadow: 0 /*{c-bup-shadow-x}*/ 1px /*{c-bup-shadow-y}*/ 0 /*{c-bup-shadow-radius}*/ #fff /*{c-bup-shadow-color}*/;
+//	background-image: -webkit-gradient(linear, left top, left bottom, from( #fff ), to( #f1f1f1 )); /* Saf4+, Chrome */
+//	background-image: -webkit-linear-gradient( #fff , #f1f1f1 ); /* Chrome 10+, Saf5.1+ */
+//	background-image:    -moz-linear-gradient( #fff , #f1f1f1 ); /* FF3.6 */
+//	background-image:     -ms-linear-gradient( #fff , #f1f1f1 ); /* IE10 */
+//	background-image:      -o-linear-gradient( #fff , #f1f1f1 ); /* Opera 11.10+ */
+//	background-image:         linear-gradient( #fff , #f1f1f1 );
+//	border: none;
+//	background: none;
+//	color: black;
+//	font-weight: bold;
+}
+
+*.ui-listview *.ui-btn-up-c,
+*.ui-listview *.ui-btn-down-c,
+*.ui-listview *.ui-btn-hover-c {
+    //position: relative;
+    //-webkit-transform: translate3d(0,0,0);
+}
