various bug fixes

--- a/less/javascripture.less
+++ b/less/javascripture.less
@@ -1,6 +1,9 @@
 dvnnm { //removed the vowels so that searches on name and divine still work!
 	text-transform: uppercase;
 }
+.added {
+	color: #bbb;
+}
 .ui-page {
 	padding-top: 0 !important;
 	padding-bottom: 0 !important;
