--- a/less/javascripture.less
+++ b/less/javascripture.less
@@ -60,6 +60,7 @@ dvnnm { //removed the vowels so that searches on name and divine still work!
 		}
 	}
 	.ui-collapsible {
+		background: #f6f6f6;
 		-moz-box-shadow: inset -3px -3px 12px rgba(0, 0, 0, 0.3);
 		-webkit-box-shadow: inset -3px -3px 12px rgba(0, 0, 0, 0.3);
 		box-shadow: inset -3px -3px 12px rgba(0, 0, 0, 0.3);
@@ -75,7 +76,31 @@ dvnnm { //removed the vowels so that searches on name and divine still work!
 				max-height: 260px;
 				margin: 0;
 				overflow: auto;
+				padding: 0;
 				position: relative;
+				li {
+					color: #ccc;
+					list-style-position: inside;
+					text-indent: 10px;
+					&:hover {
+						background: white;
+					}
+					a {
+						border-top: 1px solid #fff;
+						border-bottom: 1px solid #aaa;
+						color: #000;
+						display: block;
+						line-height: 2em;
+						text-decoration: none;
+						text-shadow: 1px 1px 0 #fff;
+						&.ui-btn-active {
+							border-color: transparent;
+							color: #fff;
+							font-weight: normal;
+							text-shadow: 1px 1px 0 #000;
+						}
+					}
+				}
 				.ui-listview {
 					margin: 0;
 				}
