search on related terms too

--- a/css/strongscolors.css
+++ b/css/strongscolors.css
@@ -1,3 +1,4 @@
+.G3588 .G3588{background:rgb(32,175,95);color:#fff;text-shadow:0 1px 0 #000000;}
 .H1 .H1{background:rgb(128,0,0);color:#fff;text-shadow:0 1px 0 #000000;}
 .H2 .H2{background:rgb(128,1,0);color:#fff;text-shadow:0 1px 0 #000000;}
 .H3 .H3{background:rgb(129,1,0);color:#fff;text-shadow:0 1px 0 #000000;}
@@ -12646,7 +12647,6 @@
 .G3585 .G3585{background:rgb(32,174,93);color:#fff;text-shadow:0 1px 0 #000000;}
 .G3586 .G3586{background:rgb(32,175,93);color:#fff;text-shadow:0 1px 0 #000000;}
 .G3587 .G3587{background:rgb(32,175,94);color:#fff;text-shadow:0 1px 0 #000000;}
-/*.G3588 .G3588{background:rgb(32,175,95);color:#fff;text-shadow:0 1px 0 #000000;}*/
 .G3589 .G3589{background:rgb(32,176,95);color:#fff;text-shadow:0 1px 0 #000000;}
 .G3590 .G3590{background:rgb(32,176,96);color:#fff;text-shadow:0 1px 0 #000000;}
 .G3591 .G3591{background:rgb(32,176,97);color:#fff;text-shadow:0 1px 0 #000000;}
