--- a/less/javascripture.less
+++ b/less/javascripture.less
@@ -170,16 +170,10 @@ html {
 	.reference-wrapper {
 		//padding-bottom: @word-details-height;
 	}
-	.sticky-panel-wrapper {
-		height: 66px;
-		h2 {
-			background: rgba(255, 255, 255, .7);
-			text-align: center;
-			margin: 0;
-			padding: .8em 0;
-			&.stuck {
-			}
-		}
+	h2 {
+		margin: 0;
+		padding: 1em 0;
+		text-align: center;
 	}
 	ol.wrapper {
 		margin: 0;
