--- a/less/javascripture.less
+++ b/less/javascripture.less
@@ -351,6 +351,13 @@ html {
 }
 
 //advanced search popup
+.ui-field-contain label.clusivity-label {
+	line-height: 2.3;
+	width: auto;
+}
+.ui-field-contain label.clusivity-label-suffix {
+	margin-left: 2%;
+}
 
 
 //fix listview performance issues
