--- a/css/layout.less
+++ b/css/layout.less
@@ -1,6 +1,10 @@
 * {border:none;margin:0;padding:0;}
 body {background:#fff;color:#000;font-family: Helvetica, Arial, sans-serif; font-size: 100%; }
-.heading-wrapper { font-size: 160%; text-align: center; }
+.heading-wrapper {
+	font-size: 160%;
+	line-height: 1.7em;
+	text-align: center;
+}
 a{text-decoration: none;}
 .trans-change.added { font-style: italic;}
 #current { background:rgba(0,0,0,.2);}
@@ -9,9 +13,6 @@ div#tabs {float:left}
 .selects select {float:left;}
 .selects select{height:100%;}
 ul li.current {background:#cceeff;}
-
-@dock-height: 37px;
-.dock {background: #000; height: @dock-height; width: 100%;}
 
 body > .wrapper { height: 0;}
 
@@ -391,21 +392,32 @@ form.search {
 #currentRef {
 	background: #ddd;
 }
+@dock-height: 50px;
 .dock {
+	background: #fff;
+	border-bottom: 1px solid #ccc;
+	height: @dock-height;
+	width: 100%;
+
 	position: fixed;
 	left: 0;
 	right: 0;
 	top: 0;
 	z-index: 9;
+	select {
+		-webkit-appearance: none;
+		min-width: 50px;
+		text-indent: .5em;
+	}
 }
 .referencePanel {
-	margin: 37px 200px 0;
+	margin: @dock-height 200px 0;
 }
 .goToPanel, .searchPanel {
 	bottom: 0;
 	overflow: scroll;
 	position: fixed;
-	top: 37px;
+	top: @dock-height;
 	width: 200px;
 }
 .goToPanel {
