--- a/css/layout.css
+++ b/css/layout.css
@@ -6,7 +6,7 @@
 body {
   background: #fff;
   color: #000;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 100%;
 }
 a {
@@ -16,7 +16,7 @@ a {
   font-style: italic;
 }
 #current {
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.1);
 }
 div#tabs {
   float: left;
@@ -56,6 +56,8 @@ transchange {
 .verse h1 {
   text-align: center;
   line-height: 150%;
+  font-family: 'Helvetica Neue';
+  font-weight: 100;
 }
 span,
 a.word-tree {
@@ -430,8 +432,9 @@ dvnnm {
 /*Forms*/
 input,
 select {
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 5px;
+  box-shadow: inset 0 0 1px #000000, inset 0 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px -1px rgba(0, 0, 0, 0.5);
   font-family: Helvetica, Arial, sans-serif;
   font-size: 20px;
   line-height: 2em;
@@ -469,7 +472,7 @@ form.search #advanced {
   display: none;
 }
 #currentRef {
-  background: #ddd;
+  background: #eee;
 }
 .dock {
   background: #fff;
