--- a/css/layout.less
+++ b/css/layout.less
@@ -1,8 +1,8 @@
 * {border:none;margin:0;padding:0;}
-body {background:#fff;color:#000;font-family: Helvetica, Arial, sans-serif; font-size: 100%; }
+body {background:#fff;color:#000;font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 100%; }
 a{text-decoration: none;}
 .trans-change.added { font-style: italic;}
-#current { background:rgba(0,0,0,.2);}
+#current { background:rgba(0,0,0,.1);}
 div#tabs {float:left}
 .selects{overflow:hidden;}
 .selects select {float:left;}
@@ -16,7 +16,7 @@ body > .wrapper { height: 0;}
 .verse .added, transchange {color:#aaa; font-style: italic;}
 .verse {line-height:1.4em; }
 .reference span {white-space: nowrap;}
-.verse h1 {text-align: center; line-height: 150%; }
+.verse h1 {text-align: center; line-height: 150%; font-family: 'Helvetica Neue'; font-weight: 100; }
 span, a.word-tree {margin: 0 -2px; padding: 0 2px; position: relative; border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;cursor:pointer;}
 .reference span:hover {
 /*	color: #fff;*/
@@ -316,8 +316,13 @@ dvnnm {text-transform: uppercase;}
 
 /*Forms*/
 input, select {
-	border: 1px solid #ccc;
+	border: none;
 	border-radius: 5px;
+	
+    box-shadow: inset 0 0 1px #000,
+                inset 0 1px 0 rgba(0, 0, 0, .1),
+                0 1px 1px -1px rgba(0, 0, 0, .5);
+
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 20px;
 	line-height: 2em;
@@ -364,7 +369,7 @@ form.search {
 	}
 }
 #currentRef {
-	background: #ddd;
+	background: #eee;
 }
 @dock-height: 50px;
 .dock {
