--- a/css/layout.less
+++ b/css/layout.less
@@ -127,19 +127,6 @@ form ul li {list-style:none;}
         rgb(190,190,190) 100%
     );
 }
-.collapsable h2 a.remove {
-	background: url(images/remove.png);
-	color: #fff;
-	display: block;
-	float: right;
-	height: 14px;
-	margin: 2px 0 0 0;
-	padding: 0;
-	width: 14px;
-}
-.collapsable h2 a.remove:hover {
-	background-position: 0 -14px;
-}
 .collapsable.closed form { display:none;}
 #referenceTracking .collapsable h2 { background-position: -26px -26px; }
 
@@ -156,21 +143,7 @@ form ul li {list-style:none;}
 	z-index:999;
 	color: #000;
 }
-.wordControlPanel {
-	clear: both;
-}
-.wordControlPanel .close {
-	background: #000;
-	color: #fff;
-	font-size: 15px;
-	height: 18px;
-	line-height: 1em;
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 14px;
-	text-align: center;
-}
+
 
 .wordControlPanelTemplate {display:none;}
 .control-panel .duplicated {
@@ -425,6 +398,20 @@ form.search {
 }
 .referencePanel {
 	margin: @dock-height 200px 0;
+	.wordControlPanel {
+		clear: both;
+		.close {
+			color: #000;
+			height: 18px;
+			line-height: 1em;
+			position: absolute;
+			top: 0;
+			right: 0;
+			padding: 5px;
+			width: 18px;
+			text-align: center;
+		}
+	}
 }
 .goToPanel, .searchPanel {
 	bottom: 0;
@@ -440,6 +427,31 @@ form.search {
 .searchPanel {
 	border-left: 1px solid #ccc;
 	right: 0;
+	h2 {
+		border-bottom: 0;
+		font-family: 'Helvetica Neue';
+		font-weight: 100;
+		position: relative;
+		.remove {
+			font-size: 14px;
+			opacity: .8;
+			position: absolute;
+			top: 8px;
+			right: 8px;
+			z-index: 999;
+		}
+		.remove:hover {
+			opacity: 1;
+		}
+	}
+	ol li {
+		color: #ddd;
+		line-height: 1.5em;
+		margin-left: .5em;
+		a {
+			color: #000;
+		}
+	}
 }
 .reading-mode {
 	.dock, .goToPanel, .searchPanel, .popup, #wordControlPanel {
@@ -448,4 +460,49 @@ form.search {
 	.referencePanel {
 		margin: 0 9%;
 	}
+}
+
+/*Fonts*/
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot');
+	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('fonts/icomoon.woff') format('woff'),
+		url('fonts/icomoon.ttf') format('truetype'),
+		url('fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+/* Use the following CSS code if you want to use data attributes for inserting your icons */
+[data-icon]:before {
+	font-family: 'icomoon';
+	content: attr(data-icon);
+	speak: none;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+/* Use the following CSS code if you want to have a class per icon */
+/*
+Instead of a list of all class selectors,
+you can use the generic selector below, but it's slower:
+[class*="icon-"] {
+*/
+.icon-close {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+}
+.icon-close:before {
+	content: "\e000";
 }
