slow down the search a bit more

--- a/css/layout.css
+++ b/css/layout.css
@@ -235,7 +235,7 @@ form ul li {
   left: 201px;
   right: 202px;
   position: fixed;
-  z-index: 999;
+  z-index: 8;
   color: #000;
 }
 .wordControlPanelTemplate {
@@ -373,19 +373,22 @@ dvnnm {
 }
 /*popups*/
 .popup {
+  background: rgba(255, 255, 255, 0.5);
   display: none;
   position: fixed;
+  bottom: 0;
   top: 0;
   left: 0;
   right: 0;
-  height: 0;
+  height: 100%;
+  width: 100%;
   z-index: 9;
 }
 .popup .content {
   background: #fff;
   border-bottom-left-radius: 1em;
   border-bottom-right-radius: 1em;
-  border: 1px solid black;
+  border: 1px solid #ccc;
   border-top: none;
   margin: 0 auto;
   overflow: auto;
@@ -393,9 +396,9 @@ dvnnm {
   position: relative;
   width: 320px;
 }
-.popup .content h2,
-.popup .content input,
-.popup .content a {
+.popup .content .content-padding h2,
+.popup .content .content-padding input,
+.popup .content .content-padding a {
   font-family: 'Helvetica Neue';
   font-weight: 100;
 }
