--- a/css/layout.less
+++ b/css/layout.less
@@ -465,7 +465,7 @@ form.search {
 	ol li {
 		color: #ddd;
 		line-height: 1.5em;
-		margin-left: .5em;
+		padding-left: .5em;
 		a {
 			color: #000;
 		}
