--- a/css/layout.less
+++ b/css/layout.less
@@ -128,7 +128,6 @@ form ul li {list-style:none;}
     );
 }
 .collapsable.closed form { display:none;}
-#referenceTracking .collapsable h2 { background-position: -26px -26px; }
 
 #wordControlPanel {
 	background: rgba( 255, 255, 255, .9 );
@@ -446,7 +445,7 @@ form.search {
 	border-left: 1px solid #ccc;
 	right: 0;
 	h2 {
-		border-bottom: 0;
+		border: none;
 		font-family: 'Helvetica Neue';
 		font-weight: 100;
 		position: relative;
