--- a/css/layout.less
+++ b/css/layout.less
@@ -283,6 +283,9 @@ dvnnm {text-transform: uppercase;}
 				font-family: 'Helvetica Neue';
 				font-weight: 100;
 			}
+			ul {
+				margin: 0 0 1em 1em;
+			}
 		}
 		input[type=submit],
 		input[type=text] {
