adding a random verse and fixing habakkuk

--- a/css/layout.less
+++ b/css/layout.less
@@ -234,6 +234,12 @@ note:hover {
 }
 
 dvnnm {text-transform: uppercase;}
+#verse {
+	.loading {
+		padding: 1em;
+		text-align: center;
+	}
+}
 #verse ol li {margin: 0 0 0 20px;
   margin-left: 50%;
 }
