--- a/css/layout.css
+++ b/css/layout.css
@@ -331,6 +331,10 @@ note:hover {
 dvnnm {
   text-transform: uppercase;
 }
+#verse .loading {
+  padding: 1em;
+  text-align: center;
+}
 #verse ol li {
   margin: 0 0 0 20px;
   margin-left: 50%;
