--- a/css/layout.less
+++ b/css/layout.less
@@ -292,6 +292,9 @@ dvnnm {text-transform: uppercase;}
 			ul {
 				margin: 0 0 1em 1em;
 			}
+			.search ul {
+				margin: 0;
+			}
 		}
 		input[type=submit],
 		input[type=text] {
