--- a/css/layout.less
+++ b/css/layout.less
@@ -393,6 +393,9 @@ form.search {
 		-webkit-appearance: none;
 		min-width: 50px;
 		text-indent: .5em;
+		&#bookSelect {
+			min-width: 160px;
+		}
 	}
 	.heading-wrapper {
 		font-size: 160%;
