--- a/css/layout.css
+++ b/css/layout.css
@@ -634,3 +634,14 @@ you can use the generic selector below, but it's slower:
 .icon-close:before {
   content: "\e000";
 }
+.full-page {
+  background: white;
+  padding-top: 1em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  z-index: 9;
+}
