--- a/css/layout.less
+++ b/css/layout.less
@@ -474,11 +474,11 @@ form.search {
 		font-weight: 100;
 		position: relative;
 		.remove {
-			font-size: 14px;
+			font-size: 32px;
 			opacity: .8;
 			position: absolute;
-			top: 8px;
-			right: 8px;
+			top: 0;
+			right: 0;
 			z-index: 999;
 		}
 		.remove:hover {
