--- a/css/layout.less
+++ b/css/layout.less
@@ -141,6 +141,10 @@ form ul li {list-style:none;}
 	position: fixed;
 	z-index:8;
 	color: #000;
+	.crossReferences {
+		padding: .1em .5em;
+	}
+
 }
 
 
