--- a/css/layout.less
+++ b/css/layout.less
@@ -410,6 +410,7 @@ form.search {
 		line-height: @dock-height;
 		position: absolute;
 		top: 0;
+		white-space: nowrap;
 	}
 	nav.right {
 		right: 4px;
