--- a/css/layout.css
+++ b/css/layout.css
@@ -16,7 +16,30 @@ a {
   font-style: italic;
 }
 #current {
-  background: rgba(0, 0, 0, 0.1);
+  background: #f6f6f6;
+  /* Old browsers */
+
+  background: -moz-linear-gradient(top, #f6f6f6 0%, #ffffff 100%);
+  /* FF3.6+ */
+
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f6f6f6), color-stop(100%, #ffffff));
+  /* Chrome,Safari4+ */
+
+  background: -webkit-linear-gradient(top, #f6f6f6 0%, #ffffff 100%);
+  /* Chrome10+,Safari5.1+ */
+
+  background: -o-linear-gradient(top, #f6f6f6 0%, #ffffff 100%);
+  /* Opera 11.10+ */
+
+  background: -ms-linear-gradient(top, #f6f6f6 0%, #ffffff 100%);
+  /* IE10+ */
+
+  background: linear-gradient(to bottom, #f6f6f6 0%, #ffffff 100%);
+  /* W3C */
+
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff', GradientType=0);
+  /* IE6-9 */
+
 }
 div#tabs {
   float: left;
