tracking the reference you go to in the goToReference field. this field will become the main one for navigating verses.

--- a/css/layout.less
+++ b/css/layout.less
@@ -20,6 +20,10 @@ ul li.current {background:#cceeff;}
 
 body > .wrapper { height: 0;}
 
+.disable-hover {
+  pointer-events: none;
+}
+
 .panel .heading {height:10%;}
 .verse {color: #000;}
 .verse .added, transchange {color:#aaa; font-style: italic;}
