--- a/css/layout.css
+++ b/css/layout.css
@@ -51,6 +51,9 @@ ul li.current {
 body > .wrapper {
   height: 0;
 }
+.disable-hover {
+  pointer-events: none;
+}
 .panel .heading {
   height: 10%;
 }
